--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@libsql/client": "^0.17.0",
     "adm-zip": "^0.5.16",
     "drizzle-orm": "^0.45.1",
+    "jszip": "^3.10.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
